--- a/style.css
+++ b/style.css
@@ -43,12 +43,10 @@ h1{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    flex-direction:row;
-    flex-wrap: wrap;   
+    flex-direction:column; 
     width:80%;
     margin:auto;
     padding-top:100px; 
-    color:#3f3f3f;
 }
 
 .sec-2{
