--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
     font-family: 'Oswald', sans-serif;
     margin: 0;
     padding:0;
-    background: linear-gradient(120deg, rgb(255, 174, 145) 30%, coral 88%, bisque 40%, rgb(255, 185, 160) 78%);
+    background-color: #808080;
 }
 
 header {
@@ -28,12 +28,25 @@ header {
 }
 
 h1{
+    font-size: 4.6rem;
+    color: #dfd7d7;
+    text-align: center;
+}
+
+h2{
+    font-size: 2.8rem;
+    color: #dfd7d7;
+    text-align: center;
+}
+
+h3{
     font-size: 3.5rem;
     color: #dfd7d7;
     text-align: center;
 }
 
 .container{
+    background: linear-gradient(120deg, rgb(255, 174, 145) 30%, coral 88%, bisque 40%, rgb(255, 185, 160) 78%);
     box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3);
     border-radius: 4cqmin;
     padding: 20px;
@@ -41,28 +54,38 @@ h1{
 
 .sec-1 {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction:column; 
-    width:80%;
+    flex-direction:column;
+    align-items: center; 
+    width:60%;
     margin:auto;
-    padding-top:100px; 
+    margin-top: 400px;
 }
 
 .sec-2{
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction:row;
-    flex-wrap: wrap;   
-    width:80%;
+    flex-direction:column;
+    align-items: center; 
+    width:60%;
+    margin:auto;
     margin-top: 20px;
-    margin-bottom: 20px;
-    color:#3f3f3f;
+    margin-bottom: 50px;
+
 }
 
 .sec-2 img{
-    border-radius: 15%;
+    border-radius: 20px;
+}
+
+iframe{
+    width:320px;
+    height:260px;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius:10px;
+    box-shadow:2px 4px 4px rgb(0 0 0 / 25%);
+    display:flex;
+    border:1px solid #bcbcbc" 
 }
 
 .div-button{
@@ -145,11 +168,83 @@ img{
 
 #tit{
     padding-top:50px;
-    font-size:2.7rem;
-    color:#3f3f3f;
+    font-size:3rem;
+    color:#272525;
     font-weight: 600;
 }
 
-iframe{
-    margin-bottom: 50px;
+.principal{
+    position: relative;
+    background-size:cover;    
+}
+
+
+.secundario {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.5);
+    
+}
+
+.secundario h1 {
+    color: #f3f3f3;
+    font-size: 4rem;
+}
+    
+.btn-contenedor{
+    margin:50px;
+    text-align:center;
+
+}
+
+.btn{
+    height: 50px;
+    width: 180px;
+    border-radius: 6px;
+    border:none;
+    font-size: 2rem;
+    padding: 8px;
+    cursor: pointer;
+    background-color:#fb4400;
+    color:#f3f3f3;
+    font-weight: 500;
+    transition: 300ms;
+    font-weight:600;
+    opacity: 0.75;
+}
+
+.btn:hover{
+    background-color:#8e1c00;
+}
+
+#contador {  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 5rem;
+}
+
+#contador div {   
+    border: 2px #fb4400 solid;
+    border-radius: 5px;
+    background: #000;
+    opacity: 0.75;
+    margin: 25px;
+    color: white;
+    width:200px;
+}
+
+
+#contador .texto {
+    display: block;
+    font-size: 2.5rem;
+    color: #fff;
+    background-color: #fb4400;
+    width:100%;
+    font-weight:600;
 }
