--- a/style.css
+++ b/style.css
@@ -1,256 +1,101 @@
-@import url('https://fonts.googleapis.com/css2?family=Handjet:wght@300;400;500&family=Oswald:wght@300;400;500;600;700&display=swap');
-
-*, *::before, *::after {
-    box-sizing: border-box;
-}
-
-html{
-    box-sizing: border-box;
-    font-size: 62.5%;
-    margin: 0 auto;
-    padding: 0 auto;
-}
-
 body{
-    font-family: 'Handjet', cursive;
-    font-family: 'Oswald', sans-serif;
-    margin: 0;
-    padding:0;
-    background-color: #808080;
-}
-
-header {
-    min-height: 10vh;
-    background-color: #3f3f3f; 
-    display:flex;
-    align-items:center;
-    justify-content:center;   
-}
-
-h1{
-    font-size: 4.6rem;
-    color: #dfd7d7;
+    margin: 0 auto;
+    margin-top: 50px;
+    padding: 0 auto;
     text-align: center;
 }
 
-h2{
-    font-size: 2.8rem;
-    color: #dfd7d7;
-    text-align: center;
-}
-
-h3{
-    font-size: 3.5rem;
-    color: #dfd7d7;
-    text-align: center;
-}
-
-.container{
-    background: linear-gradient(120deg, rgb(255, 174, 145) 30%, coral 88%, bisque 40%, rgb(255, 185, 160) 78%);
-    box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3);
-    border-radius: 4cqmin;
-    padding: 20px;
-}
-
-.sec-1 {
-    display: flex;
-    flex-direction:column;
-    align-items: center; 
-    width:60%;
-    margin:auto;
-    margin-top: 400px;
-}
-
-.sec-2{
-    display: flex;
-    flex-direction:column;
-    align-items: center; 
-    width:60%;
-    margin:auto;
-    margin-top: 20px;
-    margin-bottom: 50px;
-
-}
-
-.sec-2 img{
-    border-radius: 20px;
-}
-
-iframe{
-    width:320px;
-    height:260px;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius:10px;
-    box-shadow:2px 4px 4px rgb(0 0 0 / 25%);
-    display:flex;
-    border:1px solid #bcbcbc" 
-}
-
-.div-button{
-    text-align: center;
-}
-
-button{
-    display: inline-block;
-    width: 150px;
-    height: 40px;
-    border: none;
-    border-radius: 5px;
-    background-color: orange;
+button,
+button::after {
+    padding: 16px 20px;
+    font-size: 18px;
+    background: linear-gradient(45deg, transparent 5%, #ff013c 5%);
+    border: 0;
     color: #fff;
-    font-size: 1.7rem;
-    font-weight: bold;
-    cursor: pointer;
-    transition: 300ms;
-}
-
-button:focus{
-    outline:none;
-}
-button:hover{
-font-size: 1.8rem;
-}
-
-form div{
-    margin-bottom:30px;
-    font-size: 1.8rem;
-    width:300px;
-    text-align:left;
-}
-
-form input{
-    width: 115px;
-    height:25px;
-    font-size: 1.8rem;
-    border-color:rgb(229, 222, 207);
-    border-radius: 5px;
-    border-width: 2px;
-    text-align:center;
-    border-style: solid;
-    background-color: rgb(229, 216, 216);
-}
-
-form select{
-    width: 90px;
-    font-size: 1.8rem;
-    border-color:rgb(229, 222, 207);
-    border-radius: 5px;
-    background-color: rgb(229, 216, 216);
-    border-width: 2px;
-}
-
-form input:focus, select:focus{
-    outline:none;
-}
-
-
-#cuota{
-    font-size: 2rem;
-    width:300px;
-    text-align:left;    
-    height: 130px;
-    
-}
-#cuota div{
-    background-color: #3f3f3f; 
-    border-radius:5px;
-    color: #dfd7d7;
-    font-weight: 500;
-    padding:10px;
-}
-
-img{
-    width:400px;
-    height:auto;
-}
-
-#tit{
-    padding-top:50px;
-    font-size:3rem;
-    color:#272525;
-    font-weight: 600;
-}
-
-.principal{
+    letter-spacing: 3px;
+    line-height: 1;
+    box-shadow: 6px 0px 0px #00e6f6;
+    outline: transparent;
     position: relative;
-    background-size:cover;    
 }
 
-
-.secundario {
+button::after {
+    --slice-0: inset(50% 50% 50% 50%);
+    --slice-1: inset(80% -6px 0 0);
+    --slice-2: inset(50% -6px 30% 0);
+    --slice-3: inset(10% -6px 85% 0);
+    --slice-4: inset(40% -6px 43% 0);
+    --slice-5: inset(80% -6px 5% 0);
+    content: "Pre Entrega 1 - Ortiz Marcelo";
+    display: block;
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    background: rgba(0, 0, 0, 0.5);
-    
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(45deg, transparent 3%, #00e6f6 3%, #00e6f6 5%, #ff013c 5%);
+    text-shadow: -3px -3px 0px #f8f005, 3px 3px 0px #00e6f6;
+    clip-path: var(--slice-0);
 }
 
-.secundario h1 {
-    color: #f3f3f3;
-    font-size: 4rem;
-}
-    
-.btn-contenedor{
-    margin:50px;
-    text-align:center;
-
+button:hover::after {
+    animation: 1s glitch;
+    animation-timing-function: steps(2, end);
 }
 
-.btn{
-    height: 50px;
-    width: 180px;
-    border-radius: 6px;
-    border:none;
-    font-size: 2rem;
-    padding: 8px;
-    cursor: pointer;
-    background-color:#fb4400;
-    color:#f3f3f3;
-    font-weight: 500;
-    transition: 300ms;
-    font-weight:600;
-    opacity: 0.75;
-}
+    @keyframes glitch {
+    0% {
+    clip-path: var(--slice-1);
+    transform: translate(-20px, -10px);
+    }
 
-.btn:hover{
-    background-color:#8e1c00;
-}
+    10% {
+    clip-path: var(--slice-3);
+    transform: translate(10px, 10px);
+    }
 
-#contador {  
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: 5rem;
-}
+    20% {
+    clip-path: var(--slice-1);
+    transform: translate(-10px, 10px);
+    }
 
-#contador div {   
-    border: 2px #fb4400 solid;
-    border-radius: 5px;
-    background: #000;
-    opacity: 0.75;
-    margin: 10px;
-    color: white;
-    width:100px;
-}
+    30% {
+    clip-path: var(--slice-3);
+    transform: translate(0px, 5px);
+    }
 
+    40% {
+    clip-path: var(--slice-2);
+    transform: translate(-5px, 0px);
+    }
 
-#contador .texto {
-    display: block;
-    font-size: 2.5rem;
-    color: #fff;
-    background-color: #fb4400;
-    width:100%;
-    font-weight:600;
-}
+    50% {
+    clip-path: var(--slice-3);
+    transform: translate(5px, 0px);
+    }
 
-@media (width < 541px) {
-    .container2 img{
-        display: none;
+    60% {
+    clip-path: var(--slice-4);
+    transform: translate(5px, 10px);
+    }
+
+    70% {
+    clip-path: var(--slice-2);
+    transform: translate(-10px, 10px);
+    }
+
+    80% {
+    clip-path: var(--slice-5);
+    transform: translate(20px, -10px);
+    }
+
+    90% {
+    clip-path: var(--slice-1);
+    transform: translate(-10px, 0px);
+    }
+
+    100% {
+    clip-path: var(--slice-1);
+    transform: translate(0);
     }
 }
